$Id: History,v 1.2 1999-02-09 15:11:02 kurasige Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Feb. 9 99 H.Kurashige
- G4VUserPhysicsList::RemoveProcessManager is added 

Dec. 9 98 H.Kurashige (tag run-00-04-01)
- G4VUserPhysicsList is updated to use G4GenericIon (Hisaya)
- G4VUserPhysicsList::ConstructAllParticles method is added (Hisaya)
- G4VUserPhysicsList::DumpCutValues use BestOfUnits (Michel)

Nov 12, 98 M.Asai (tag run-00-03-05)
- G4VUserPhysicsList.cc is updated for new EM physics processes (L.Urban).

Oct 13, 98 M.Asai (tag run-00-03-04)
- PostStepDoIt of transportation is registered (J.Apostolakis).

Oct 01, 98 M.Asai (tag run-00-03-03)
- G4RunManager now has a switch for optimizing the geometry.
- G4RunMessenger has a UI command for above switch.

Sep 29, 98 M.Asai (tag run-00-03-02)
- Modifications on G4VUserPhysicsList (M.Maire and L.Urban)

Sep 25, 98 M.Asai (tag run-00-03-01)
- "BeamOn" accepts a macro file.
    affected files : G4RunManager.hh .cc, G4RunMessenger.hh .cc

Aug 31, 98 John Allison (tag run-00-02-02)
- Re-implemented pVVisManager->GeometryHasChanged()!

Aug 17, 98 H.Kurashige (tag run-00-02-03)
- Added create/delete G4ProcessTableMessenger
