@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4UserRunAction.cc,v 1.1 1999-01-07 16:14:18 gunter Exp $
+// $Id: G4UserRunAction.cc,v 1.2 1999-04-09 02:28:10 asaim Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 
@@ -17,9 +17,9 @@ G4UserRunAction::G4UserRunAction()
 G4UserRunAction::~G4UserRunAction()
 {;}
 
-void G4UserRunAction::BeginOfRunAction(G4Run* aRun)
+void G4UserRunAction::BeginOfRunAction(const G4Run* aRun)
 {;}
 
-void G4UserRunAction::EndOfRunAction(G4Run* aRun)
+void G4UserRunAction::EndOfRunAction(const G4Run* aRun)
 {;}
 
