@@ -1,4 +1,4 @@
-$Id: History,v 1.2 1999-02-09 15:11:02 kurasige Exp $
+$Id: History,v 1.3 1999-04-09 02:27:41 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Apr 09, 99 M.Asai (tag run-01-00-01)
+- Argument of G4UserRunAction methods bcomes to const.
+
 Feb. 9 99 H.Kurashige
 - G4VUserPhysicsList::RemoveProcessManager is added 
 
